--- a/style.css
+++ b/style.css
@@ -28,6 +28,27 @@ section#telefone{
     width: 311px;
     background: url('imagens/frame-iphone.png') no-repeat;
 }
-#sociai{
+#tela{
+    position: absolute;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
+    border-radius: 2px;
+}
+section#sociais{
     text-align: right;
+}
+section#sociais img{
+    position: relative;
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    border: 1px solid #000000;
+}
+section#sociais img:hover{
+    transition-duration: 1s;
+    border: 1px solid #00e5ff;
+    box-shadow: 5px 5px 5px #000000;
 }
